--- a/vs2015/thread_pro/03_06/03_06.vcxproj.filters
+++ b/vs2015/thread_pro/03_06/03_06.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="hello_concurent.cpp">
+    <ClCompile Include="main36.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
