--- a/vs2017/test/WinThread/WinThread/WinThread.vcxproj
+++ b/vs2017/test/WinThread/WinThread/WinThread.vcxproj
@@ -20,9 +20,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{6328E68D-9822-4C30-97AB-5117E87F44B7}</ProjectGuid>
+    <ProjectGuid>{F5AFF644-AB9F-495E-BAE0-5D018E160694}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>My021</RootNamespace>
+    <RootNamespace>WinThread</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -143,7 +143,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="test.cpp" />
+    <ClCompile Include="thread1.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
